04-deploy-k8s/uptime-kuma/nfs-kuma.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
