04-deploy-k8s/uptime-kuma/service-uptime.yaml
apiVersion: v1
kind: Service
metadata:
  name: danny-uptime-uptime-kuma
  namespace: monitoring
spec:
  ports:
    - name: http
      port: 3001
      protocol: TCP
      targetPort: 3001
