04-deploy-k8s/uptime-kuma/ingress-uptime.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-ingress
  namespace: monitoring
spec:
  ingressClassName: haproxy
  rules:
    - host: uptime.danny.vn
      http:
        paths:
          - backend:
              service:
                name: danny-uptime-uptime-kuma
                port:
                  number: 3001
            path: /
            pathType: Prefix
